--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -114,6 +114,7 @@ p.hashtag{
 
 .rooms-prices .inner-card{
     background-color: #626266;
+    position:relative;
 }
 
 .rooms-prices .inner-card .nav {
@@ -384,6 +385,20 @@ p{
 
   .book-now .input-form{
     width:100%
+  }
+
+  .rooms-prices .room-image{
+    min-height: 222px;
+  }
+
+  .rooms-prices .inner-card .nav .nav-arrows{
+    position: absolute;
+    top: 250px;
+    left: 0px;
+    right: 0px;
+    width: 154px;
+    margin: auto;
+    text-shadow: 1px 2px 1px #090808;
   }
 }
 
