adding last changes

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -18,8 +18,9 @@ p{
     box-sizing: border-box;
 }
 
-body{
-    overflow-x: hidden;
+body, html{
+    overflow-x: hidden !important;
+    max-width:100vw !important;
 }
 
 .uk-navbar-brand img{
@@ -409,14 +410,14 @@ p{
     text-align: center;
   }
 
-  .wow {
+  /*.wow {
     visibility: visible !important;
     -webkit-animation: none !important;
        -moz-animation: none !important;
          -o-animation: none !important;
         -ms-animation: none !important;
             animation: none !important;
-  }
+  }*/
 }
 
 @media (max-width: 500px) {
