--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -386,6 +386,8 @@ p{
   .meetings .meeting-card{
     padding-bottom: 20px;
     width:100%;
+    padding-left: 0px;
+    padding-right:0px; 
   }
 
   .book-now .input-form{
@@ -408,6 +410,10 @@ p{
 
   .rooms-prices .inner-card .nav{
     text-align: center;
+  }
+
+  .container{
+    padding: 50px 20px;
   }
 
   /*.wow {
