--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -480,3 +480,25 @@ p{
     border-bottom:1px solid white;
     text-decoration: none; 
 }
+
+.room-content{
+    display: none;
+}
+
+.room-content.active{
+    display: initial;
+}
+
+.nav-left, .nav-right{
+    cursor: pointer;
+    outline:0;
+
+}
+
+.submit{
+    margin-top: 30px;
+    background-color: #005F9F;
+    color:white;
+    border-radius: 6px;
+    font-size: 15px;
+}
