--- a/views/index.ejs
+++ b/views/index.ejs
@@ -303,9 +303,9 @@
     <div class="container social-media wow fadeInUp">
         <h2>Follow Us</h2>
         <ul>
-            <li><a href=""><i class="fa fa-facebook" style="padding-right: 11px;"></i></a></li>
-            <li><a href=""><i class="fa fa-instagram"></i></a></li>
-            <li><a href=""><i class="fa fa-youtube"></i></a></li>
+            <li><a href="https://www.facebook.com/TrypWTCMexico/"><i class="fa fa-facebook" style="padding-right: 11px;"></i></a></li>
+            <li><a href="https://www.instagram.com/trypwtcmexico/"><i class="fa fa-instagram"></i></a></li>
+            <li><a href="https://twitter.com/TrypWTCMexico"><i class="fa fa-twitter"></i></a></li>
         </ul>
     </div>
 
