adding multiple languages to tryp

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -510,3 +510,40 @@ p{
     margin-top: 10px;
     display: none;
 }
+
+li.language button{
+    border-radius: 100%;
+    width:35px;
+    height:35px;
+    padding-right: 15px;
+    padding-left: 10px;
+    padding-top: 5px;
+    margin-top: 15px;
+    margin-right: 10px;
+}
+
+li.language .uk-dropdown{
+    width:inherit !important;
+    left:2px;
+    padding-top: 6px;
+    padding-bottom: 1px;
+    background-color: transparent !important;
+}
+
+li.language .uk-dropdown .uk-nav{
+    padding-left: 0px;
+}
+
+li.language .uk-dropdown .uk-nav li{
+    border-radius: 100%;
+    background-color: white;
+    margin-bottom: 10px;
+}
+
+li.language .uk-dropdown .uk-nav li a{
+    cursor: pointer;
+    width:35px;
+    height:35px;
+    padding-left: 10px;
+    padding-top: 10px;
+}
