--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,7 +14,7 @@
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/uikit/2.27.2/css/components/slidenav.min.css">
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/uikit/2.27.2/css/components/datepicker.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
-  
+    <link  href="http://cdnjs.cloudflare.com/ajax/libs/fotorama/4.6.4/fotorama.css" rel="stylesheet">   
 </head>
 <body>
     <nav class="uk-navbar">
@@ -25,6 +25,7 @@
             <li><a href="#Home" data-uk-smooth-scroll><%-language.home%></a></li>
             <li><a href="#HotelAndCulture" data-uk-smooth-scroll><%-language.hotelAndCulture%></a></li>
             <li><a href="#RoomAndPrices" data-uk-smooth-scroll><%-language.roomsAndPrices%></a></li>
+            <li><a href="#Gallery" data-uk-smooth-scroll>GALLERY</a></li>
             <li><a href="#Meetings" data-uk-smooth-scroll><%-language.yourMeetings%></a></li>
             <li><a href="#Rewards" data-uk-smooth-scroll><%-language.rewards%></a></li>
             <li><a href="#BookNow" data-uk-smooth-scroll><%-language.bookNow%></a></li>
@@ -51,6 +52,7 @@
                 <li><a href="#Home" data-uk-smooth-scroll><%-language.home%></a></li>
                 <li><a href="#HotelAndCulture" data-uk-smooth-scroll><%-language.hotelAndCulture%></a></li>
                 <li><a href="#RoomAndPrices" data-uk-smooth-scroll><%-language.roomsAndPrices%></a></li>
+                <li><a href="#Gallery" data-uk-smooth-scroll>GALLERY</a></li>
                 <li><a href="#Meetings" data-uk-smooth-scroll><%-language.yourMeetings%></a></li>
                 <li><a href="#Rewards" data-uk-smooth-scroll><%-language.rewards%></a></li>
                 <li><a href="#BookNow" data-uk-smooth-scroll><%-language.bookNow%></a></li>
@@ -210,6 +212,45 @@
         </div>
     </div>
 
+    <div class="gallery" id="Gallery">
+        <h1 class="meeth1" style="margin-right:50px; margin-left:50px; margin-bottom:40px;"><%-language.gallery%></h1>
+        <!-- <div data-uk-slider="{center:true}" class="uk-slidenav-position">
+            <div class="uk-slider-container">
+                <ul class="uk-slider uk-grid-width-medium-1-3">
+                    <li><img src="images/SLIDE1.jpg"></li>
+                    <li><img src="images/SLIDE2.jpg"></li>
+                    <li><img src="images/SLIDE3.jpg"></li>
+                    <li><img src="images/SLIDE4.jpg"></li>
+                </ul>
+            </div>
+            <a href="" class="uk-slidenav uk-slidenav-contrast uk-slidenav-previous" data-uk-slider-item="previous"></a>
+            <a href="" class="uk-slidenav uk-slidenav-contrast uk-slidenav-next" data-uk-slider-item="next"></a>
+        </div> -->
+
+        <div class="fotorama" data-width="100%" data-nav="thumbs">
+            <img src="images/g1.jpg">
+            <img src="images/g2.jpg">
+            <img src="images/g3.jpeg">
+            <img src="images/g4.jpeg">
+            <img src="images/g5.jpeg">
+            <img src="images/g6.jpg">
+            <img src="images/g7.jpg">
+            <img src="images/g8.jpg">
+            <img src="images/g9.jpg">
+            <img src="images/g10.jpg">
+            <img src="images/g11.jpg">
+            <img src="images/g12.jpg">
+            <img src="images/g13.jpg">
+            <img src="images/g14.jpg">
+            <img src="images/g15.jpg">
+            <img src="images/g16.jpg">
+            <img src="images/g17.jpg">
+            <img src="images/g18.jpg">
+            
+        </div>
+
+    </div>
+
 
     <div class="meetings container" id="Meetings">
         <h1 class="meeth1"><%-language.meetings.heading%></h1>
@@ -292,8 +333,8 @@
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/uikit/2.27.2/js/core/smooth-scroll.min.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/uikit/2.27.2/js/core/dropdown.min.js"></script>
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/fotorama/4.6.4/fotorama.js"></script> <!-- 16 KB -->
 
-    <script type="text/javascript">
         /*var $animation_elements = $('.animation-element');
         var $window = $(window);
         function check_if_in_view() {
