--- a/views/index.ejs
+++ b/views/index.ejs
@@ -334,7 +334,7 @@
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/uikit/2.27.2/js/core/smooth-scroll.min.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/uikit/2.27.2/js/core/dropdown.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/fotorama/4.6.4/fotorama.js"></script> <!-- 16 KB -->
-
+    <script type="text/javascript">
         /*var $animation_elements = $('.animation-element');
         var $window = $(window);
         function check_if_in_view() {
