--- a/views/index.ejs
+++ b/views/index.ejs
@@ -227,7 +227,7 @@
             <a href="" class="uk-slidenav uk-slidenav-contrast uk-slidenav-next" data-uk-slider-item="next"></a>
         </div> -->
 
-        <div class="fotorama" data-width="100%" data-nav="thumbs">
+        <div class="fotorama" data-width="100%" data-maxheight="500px" data-nav="thumbs" data-fit="cover">
             <img src="images/g1.jpg">
             <img src="images/g2.jpg">
             <img src="images/g3.jpeg">
