--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -158,7 +158,7 @@ p.hashtag{
 }
 
 .rooms-prices .room-image{
-    width:60%;
+    width:50%;
     display: inline-block;
     vertical-align: top;
     background-size: cover !important;
@@ -168,7 +168,7 @@ p.hashtag{
 }
 
 .rooms-prices .room-details{
-    width:40%;
+    width:50%;
     display: inline-block;
     vertical-align: top;
     padding:0px 40px;
@@ -180,7 +180,7 @@ p.hashtag{
 
 .rooms-prices .room-details h4{
     color:white;
-    font-size: 29px;
+    font-size: 35px;
     font-weight: bolder;
 }
 
@@ -214,10 +214,31 @@ p.hashtag{
 
 
 .rewards{
-    background:url('../images/rewards_asd.jpg');
     background-position: center center;
     background-size: cover;
-    color:white;
+    color:black;
+    background-color: white;
+}
+
+.rewards .left-block{
+    width:50%;
+    display: inline-block;
+    vertical-align: top;
+    padding:40px;
+    text-align: center;
+}
+
+.rewards .left-block .bg-rewards-page img{
+    width:100%;
+    margin-top: 5%;
+}
+
+.rewards .right-block{
+    width:50%;
+    display: inline-block;
+    vertical-align: top;
+    text-align: center;
+    padding:40px;
 }
 
 .rewards .overlay{
@@ -245,12 +266,19 @@ p.hashtag{
 .rewards h3{
     font-weight: 500;
     font-size: 20px;
-    color:white;
     margin-bottom: 5px;
 }
 
 .rewards a{
     color:#ffedaa;
+}
+
+.rewards .button-style{
+    background-color: #007DCF;
+    border-radius: 20px;
+    color:white;
+    padding:12px 25px 10px 25px;
+    display: inline-block;
 }
 
 .book-now{
@@ -375,86 +403,24 @@ p{
 
 
 
-@media (max-width: 650px) {
-  .rooms-prices .room-image {
-    width:100%;
-  }
-
-  .rooms-prices .room-details{
-    width:100%;
-  }
-
-  .meetings .meeting-card{
-    padding-bottom: 20px;
-    width:100%;
-    padding-left: 0px;
-    padding-right:0px; 
-  }
-
-  .book-now .input-form{
-    width:100%
-  }
-
-  .rooms-prices .room-image{
-    min-height: 222px;
-  }
-
-  .rooms-prices .inner-card .nav .nav-arrows{
-    position: absolute;
-    top: 250px;
-    left: 0px;
-    right: 0px;
-    width: 154px;
-    margin: auto;
-    text-shadow: 1px 2px 1px #090808;
-  }
-
-  .rooms-prices .inner-card .nav{
-    text-align: center;
-  }
-
-  .container{
-    padding: 50px 20px;
-  }
-
-  /*.wow {
-    visibility: visible !important;
-    -webkit-animation: none !important;
-       -moz-animation: none !important;
-         -o-animation: none !important;
-        -ms-animation: none !important;
-            animation: none !important;
-  }*/
-}
-
-@media (max-width: 500px) {
-    .social-media{
-        text-align: center;
-    }
-
-    .social-media h2{
-        float:none;
-    }
-
-    .social-media ul{
-        padding-top: 20px;
-    }
-
-    .social-media{
-        padding:20px;
-    }
-
-}
 
 .room-details .short-desc{
-    font-size: 16px;
+    font-size: 25px;
     font-weight: lighter;
     margin-bottom: 15px;
     display: block;
 }
 
+.room-details p{
+    font-size: 22px;
+}
+
+.room-details ul li{
+    line-height: 1.4em;
+}
+
 .room-details ul{
-    font-size: 16px;
+    font-size: 22px;
     padding:0px;
     list-style: none;
 }
@@ -487,7 +453,7 @@ p{
 }
 
 .room-content.active{
-    display: initial;
+    display: block;
 }
 
 .nav-left, .nav-right{
@@ -549,11 +515,211 @@ li.language .uk-dropdown .uk-nav li a{
 }
 
 .gallery{
-    background-color: #EFEFE4;
+    background-color: #005F9B;
     padding-top: 50px;
     padding-bottom: 50px;
     text-align: center;
 }
+
+.gallery h1{
+    color:white;
+    border-color: #cedee9 !important;
+    margin-right:50px; 
+    margin-left:50px; 
+    margin-bottom:20px;
+}
+
+.meetings-footer{
+    padding-top: 40px;
+}
+
+.meetings-footer p{
+    font-size: 20px;
+}
+
+.meetings-footer p b{
+    color: #005F9B;
+}
+
+.devi-skybar .left-block{
+    width:40%;
+    display: inline-block;
+    vertical-align: top;
+    position: relative;
+    padding:40px;
+    border-right: 2px solid rgba(255,255,255,0.5);
+}
+
+
+.devi-skybar{
+    display: -webkit-box;      /* OLD - iOS 6-, Safari 3.1-6 */
+    display: -moz-box;         /* OLD - Firefox 19- (buggy but mostly works) */
+    display: -ms-flexbox;      /* TWEENER - IE 10 */
+    display: -webkit-flex;     /* NEW - Chrome */
+    display: flex; 
+    padding-top: 40px;
+    padding-bottom: 40px;
+}
+
+.devi-skybar .right-block{
+    width:60%;
+    display: inline-block;
+    vertical-align: top;
+    position: relative;
+    padding-left: 40px;
+}
+
+.devi-skybar{
+    background-color: #005F9B;
+    color:white;
+}
+
+.devi-skybar .left-block h1{
+    color:white;
+}
+
+.devi-skybar .left-block p{
+    font-size:19px;
+    line-height: 1.5em;
+}
+
+
+
+
+
+@media (max-width: 650px) {
+  .rooms-prices .room-image {
+    width:100%;
+  }
+
+  .rooms-prices .room-details{
+    width:100%;
+  }
+
+  .meetings .meeting-card{
+    padding-bottom: 20px;
+    width:100%;
+    padding-left: 0px;
+    padding-right:0px; 
+  }
+
+  .book-now .input-form{
+    width:100%
+  }
+
+  .rooms-prices .room-image{
+    min-height: 222px;
+  }
+
+  .rooms-prices .inner-card .nav .nav-arrows{
+    position: absolute;
+    top: 250px;
+    left: 0px;
+    right: 0px;
+    width: 154px;
+    margin: auto;
+    text-shadow: 1px 2px 1px #090808;
+  }
+
+  .rooms-prices .inner-card .nav{
+    text-align: center;
+  }
+
+  .container{
+    padding: 50px 20px;
+  }
+
+  .room-details .short-desc{
+      font-size: 19px !important;
+  }
+
+  .room-details p{
+      font-size: 18px !important;
+  }
+
+  .room-details ul li{
+      
+  }
+
+  .room-details ul{
+      font-size: 18px !important;
+  }
+
+  .rewards .left-block, .rewards .right-block{
+    width:100%;
+  }
+
+  .rewards .left-block{
+    padding-bottom: 0px;
+    padding-top: 0px;
+  }
+
+  .rewards .left-block img{
+    max-width: 260px;
+    margin:0px;
+  }
+
+  /*.wow {
+    visibility: visible !important;
+    -webkit-animation: none !important;
+       -moz-animation: none !important;
+         -o-animation: none !important;
+        -ms-animation: none !important;
+            animation: none !important;
+  }*/
+
+  .devi-skybar{
+    display: block;
+  }
+
+  .devi-skybar .left-block{
+    width:100%;
+    border:none;
+  }
+
+  .devi-skybar .right-block{
+    width:100%;
+    border:none;
+    padding:40px;
+    padding-top: 0px;
+  }
+}
+
+@media (max-width: 500px) {
+    .social-media{
+        text-align: center;
+    }
+
+    .social-media h2{
+        float:none;
+    }
+
+    .social-media ul{
+        padding-top: 20px;
+    }
+
+    .social-media{
+        padding:20px;
+    }
+
+}
+
+.flex{
+    display: -webkit-box;      /* OLD - iOS 6-, Safari 3.1-6 */
+    display: -moz-box;         /* OLD - Firefox 19- (buggy but mostly works) */
+    display: -ms-flexbox;      /* TWEENER - IE 10 */
+    display: -webkit-flex;     /* NEW - Chrome */
+    display: flex; 
+    -webkit-justify-content: center; /* Safari 6.1+ */
+    justify-content: center;
+}
+
+.flex .input-form{
+    min-width: initial;
+}
+
+
+
 
 /*.uk-slider .uk-active{
     width:11% !important;
