--- a/views/index.ejs
+++ b/views/index.ejs
@@ -73,11 +73,11 @@
                     </div>
                 </li>
                 <li>
-                    <img src="/images/SLIDE2.jpg" width="800" height="400">
+                    <img src="/images/SLIDE4.jpg" width="800" height="400">
                     <div class="uk-overlay-panel uk-overlay-background uk-overlay-fade overlay-inside-content uk-flex uk-flex-center uk-flex-middle uk-text-center">
                         <div class="overlay-inside-content">
-                            <h1><%-language.slider.heading1%></h1>
-                            <p><%-language.slider.paragraph1%></p>
+                            <h1><%-language.slider.heading2%></h1>
+                            <p><%-language.slider.paragraph2%></p>
                         </div>
                     </div>
                 </li>
@@ -85,21 +85,20 @@
                     <img src="/images/SLIDE3.jpg" width="800" height="400">
                     <div class="uk-overlay-panel uk-overlay-background uk-overlay-fade overlay-inside-content uk-flex uk-flex-center uk-flex-middle uk-text-center">
                         <div class="overlay-inside-content">
-                            <h1><%-language.slider.heading1%></h1>
-                            <p><%-language.slider.paragraph1%></p>
+                            <h1><%-language.slider.heading3%></h1>
+                            <p><%-language.slider.paragraph3%></p>
                         </div>
                     </div>
                 </li>
                 <li>
-                    <img src="/images/SLIDE4.jpg" width="800" height="400">
+                    <img src="/images/SLIDE2.jpg" width="800" height="400">
                     <div class="uk-overlay-panel uk-overlay-background uk-overlay-fade overlay-inside-content uk-flex uk-flex-center uk-flex-middle uk-text-center">
                         <div class="overlay-inside-content">
-                            <h1><%-language.slider.heading1%></h1>
-                            <p><%-language.slider.paragraph1%></p>
+                            <h1><%-language.slider.heading4%></h1>
+                            <p><%-language.slider.paragraph4%></p>
                         </div>
                     </div>
                 </li>
-                
             </ul>
             <a href="" class="uk-slidenav uk-slidenav-contrast uk-slidenav-previous" data-uk-slideshow-item="previous"></a>
             <a href="" class="uk-slidenav uk-slidenav-contrast uk-slidenav-next" data-uk-slideshow-item="next"></a>
@@ -153,7 +152,7 @@
                 <div class="room-image" style="background:url('/images/STANDARD_DOUBLE_ROOM.jpg')"></div><div 
                 class="room-details">
                     <h4><%-language.rooms.standardDoubleRoom%></h4>
-                    <span class="short-desc" style="font-size: 17px;">
+                    <span class="short-desc">
                         <%-language.rooms.standardDoubleRoomDesc%>
                     </span>
                     <p>
@@ -168,7 +167,7 @@
                 <div class="room-image" style="background:url('/images/FITNESS_ROOM.jpg')"></div><div 
                 class="room-details">
                     <h4><%-language.rooms.fitnessRoom%></h4>
-                    <span class="short-desc" style="font-size: 17px;">
+                    <span class="short-desc">
                         <%-language.rooms.fitnessRoomDesc%>
                     </span>
                     <p>
@@ -183,7 +182,7 @@
                 <div class="room-image" style="background:url('/images/premium.png')"></div><div 
                 class="room-details">
                     <h4><%-language.rooms.premiumRoom%></h4>
-                    <span class="short-desc" style="font-size: 17px;">
+                    <span class="short-desc">
                         <%-language.rooms.premiumRoomDesc%>
                     </span>
                     <p>
@@ -198,7 +197,7 @@
                 <div class="room-image" style="background:url('/images/FAMILY_ROOM.jpg')"></div><div 
                 class="room-details">
                     <h4><%-language.rooms.familyRoom%></h4>
-                    <span class="short-desc" style="font-size: 17px;">
+                    <span class="short-desc">
                         <%-language.rooms.familyRoomDesc%>
                     </span>
                     <p>
