--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -298,6 +298,7 @@ p.hashtag{
     display: block;
     color:white;
     margin-bottom: 6px;
+    font-size: 18px;
 }
 
 .book-now .input-form input{
