--- a/views/index.ejs
+++ b/views/index.ejs
@@ -67,7 +67,7 @@
                     <img src="/images/SLIDE1.jpg" width="800" height="400">
                     <div class="uk-overlay-panel uk-overlay-background uk-overlay-fade overlay-inside-content uk-flex uk-flex-center uk-flex-middle uk-text-center">
                         <div class="overlay-inside-content">
-                            <h1><%- language.slider.heading1 %></h1>
+                            <h1 style="font-size:82px;"><%- language.slider.heading1 %></h1>
                             <p><%-language.slider.paragraph1%></p>
                         </div>
                     </div>
@@ -76,7 +76,7 @@
                     <img src="/images/SLIDE4.jpg" width="800" height="400">
                     <div class="uk-overlay-panel uk-overlay-background uk-overlay-fade overlay-inside-content uk-flex uk-flex-center uk-flex-middle uk-text-center">
                         <div class="overlay-inside-content">
-                            <h1><%-language.slider.heading2%></h1>
+                            <h1 style="font-size:55px;"><%-language.slider.heading2%></h1>
                             <p><%-language.slider.paragraph2%></p>
                         </div>
                     </div>
@@ -85,7 +85,7 @@
                     <img src="/images/SLIDE3.jpg" width="800" height="400">
                     <div class="uk-overlay-panel uk-overlay-background uk-overlay-fade overlay-inside-content uk-flex uk-flex-center uk-flex-middle uk-text-center">
                         <div class="overlay-inside-content">
-                            <h1><%-language.slider.heading3%></h1>
+                            <h1 style="font-size: 60px; line-height: 1.02;"><%-language.slider.heading3%></h1>
                             <p><%-language.slider.paragraph3%></p>
                         </div>
                     </div>
@@ -94,7 +94,7 @@
                     <img src="/images/SLIDE2.jpg" width="800" height="400">
                     <div class="uk-overlay-panel uk-overlay-background uk-overlay-fade overlay-inside-content uk-flex uk-flex-center uk-flex-middle uk-text-center">
                         <div class="overlay-inside-content">
-                            <h1><%-language.slider.heading4%></h1>
+                            <h1 style="font-size: 60px; line-height: 1.02;"><%-language.slider.heading4%></h1>
                             <p><%-language.slider.paragraph4%></p>
                         </div>
                     </div>
