--- a/views/index.ejs
+++ b/views/index.ejs
@@ -363,7 +363,7 @@
         <h2><%-language.followUs%></h2>
         <ul>
             <li><a href="https://www.facebook.com/TrypWTCMexico/"><i class="fa fa-facebook" style="padding-right: 11px;"></i></a></li>
-            <li><a href="https://www.instagram.com/trypwtcmexico/"><i class="fa fa-instagram"></i></a></li>
+            <!-- <li><a href="https://www.instagram.com/trypwtcmexico/"><i class="fa fa-instagram"></i></a></li> -->
             <li><a href="https://twitter.com/TrypWTCMexico"><i class="fa fa-twitter"></i></a></li>
         </ul>
     </div>
