--- a/views/index.ejs
+++ b/views/index.ejs
@@ -369,7 +369,7 @@
     </div>
 
     <footer>
-        <p><%-language.footer%></p>
+        <p><%-language.footer%><br />Viaducto Miguel Alemán No 14, Nápoles, 03810 Ciudad de México, CDMX</p>
     </footer>
 
     <script
